--- a/gaoas3comp.yaml
+++ b/gaoas3comp.yaml
@@ -1,6 +1,87 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: GAOAs3Comp
+  title: AmericanFflightsComponents
 paths: {}
-components: {}
+
+components: 
+  securitySchemes:
+    api_key:
+      type: apiKey
+      name: api_key
+      in: header
+
+  examples:
+    flight:
+      value: 
+        ID: 234
+        code: ER38sd
+        price: 400
+        departureDate: 2017/07/26
+        origin: CLE
+        destination: SFO
+        emptySeats: 0
+        plane:
+          type: Boeing 737
+          totalSeats: 150
+    flightNoID:
+      value: 
+        code: ER38sd
+        price: 400
+        departureDate: 2017/07/26
+        origin: CLE
+        destination: SFO
+        emptySeats: 0
+        plane:
+          type: Boeing 737
+          totalSeats: 150
+    flightsList:
+      value: 
+        - 
+          ID: 1
+          code: ER38sd
+          price: 400
+          departureDate: 2017/07/26
+          origin: CLE
+          destination: SFO
+          emptySeats: 0
+          plane:
+            type: Boeing 737
+            totalSeats: 150
+        -
+          ID: 123
+          code: ADE23
+          price: 490
+          departureDate: 2017/07/26
+          origin: NYC
+          destination: SFO
+          emptySeats: 3
+          plane:
+            type: Boeing 737
+            totalSeats: 150
+  schemas:
+    AmericanFlightDataType:
+      type: object
+      description: American Flight Data Type
+      properties:
+        ID?: 
+          type: number
+        code:  
+          type: string
+        price:  
+          type: number
+        departureDate:  
+          type: string
+        origin:  
+          type: string
+        destination:  
+          type: string
+        emptySeats:  
+          type: number
+        plane:
+          type: object
+          properties: 
+            type:  
+              type: string
+            totalSeats:  
+              type: number
