--- a/gaoas3comp.yaml
+++ b/gaoas3comp.yaml
@@ -26,8 +26,8 @@ components:
           totalSeats: 150
     flightNoID:
       value: 
-        code: ER38sd
-        price: 400
+        code: ER34sg
+        price: 500
         departureDate: 2017/07/26
         origin: CLE
         destination: SFO
@@ -39,11 +39,11 @@ components:
       value: 
         - 
           ID: 1
-          code: ER38sd
+          code: ER66pl
           price: 400
-          departureDate: 2017/07/26
-          origin: CLE
-          destination: SFO
+          departureDate: 2017/07/24
+          origin: EZE
+          destination: MIA
           emptySeats: 0
           plane:
             type: Boeing 737
@@ -52,7 +52,7 @@ components:
           ID: 123
           code: ADE23
           price: 490
-          departureDate: 2017/07/26
+          departureDate: 2017/07/24
           origin: NYC
           destination: SFO
           emptySeats: 3
